fixed testimony text cutoff issue in safari

--- a/project/css/memorial_interior.css
+++ b/project/css/memorial_interior.css
@@ -106,11 +106,11 @@
   );
   shape-margin: 7%;
 }
-.text div {
+.text p {
   height: 100%;
   margin: 0;
 }
-.text div::before {
+.text p::before {
   content: "";
   width: 50%;
   height: 100%;
@@ -129,8 +129,4 @@
     50% 6%
   );
   shape-margin: 7%;
-}
-
-.text div p {
-  margin: 0;
 }
